WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212357
Extended Color Cleanup: Assert !isExtended() in Color::asSimpleColor()...finally
https://bugs.webkit.org/show_bug.cgi?id=212357
Summary
Extended Color Cleanup: Assert !isExtended() in Color::asSimpleColor()...finally
Sam Weinig
Reported
2020-05-25 11:33:45 PDT
Extended Color Cleanup: Assert !isExtended() in Color::asSimpleColor()...finally
Attachments
Patch
(2.88 KB, patch)
2020-05-25 11:36 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2020-05-25 11:36:52 PDT
Created
attachment 400210
[details]
Patch
EWS
Comment 2
2020-05-25 12:25:56 PDT
Committed
r262129
: <
https://trac.webkit.org/changeset/262129
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400210
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-25 12:26:12 PDT
<
rdar://problem/63603898
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug